--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,54 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>march . 27 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/eMjBRc3.png"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+a whole lot happened lately.. it's been tiring but really fulfilling, i am living my happiest days despite all the problems <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm in the middle of the moving, and it's taking more time than expected because of the quarantine. we decided to completely renovate and redecorate this tiny little house near my mother-in-law's house, we need to buy lots of materials ( and new furniture ) but we can't for the time being, so we're working with what we have !
+it's an adorabe house with one bedroom, one bathroom, kitchen ( yes it is very small, i love it ) and a big garden space.
+it's a little far from where bubu works so we are considering renting an apartment in the future, if it's more comfortable.. but at the moment he is working "home office" so it is not a problem, anyway this little house will always be ours and it is a great place for animals and plants !
+i'm happy to be close to nature whenever i can <sub><sub><img width="25px" height="auto" src="https://i.imgur.com/VLrH9jG.png"/></sub></sub>
+these days have been difficult for me to work because i can't go to the post office and people are saving for the quarantine, so no commissions ... i'm trying my best to help with housework and renovations, i'm cleaning and painting and doing everything i can do !!
+we are staying at my mother-in-law's house at the moment until the quarantine ends, i hope that everything will be normalized soon so that i can take my belongings out of boxes and decorate our new little home very cutely <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+these days i haven't done many things that i can show here, but i colored two beautiful drawings : </pre>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/qV1RjpK.png"/><br>
+<img width="410px" height="auto" src="https://i.imgur.com/MNr6Zc4.png"/></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these are from the talented <a id="linkbjinho" href="https://www.instagram.com/baby.doll.heart/" target="_blank">baby.doll.heart</a> on instagram, please check her work..
+she's always drawing wonderful pieces <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/mURljB7.png"/></sub></sub>
+i experimented with textures this time, and i really liked the result !!
+i like to paint "flat", without much contrast of light & shadows, so textures and patterns help a lot to give detail softly <font color="#d3a5a5" style="font-size:11px;">♡</font>
+which one did you like the most ?
+
+ah, there's one more thing to tell you fluffies !
+i bought an adorable domain, <b>pooftie.me</b> <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm using it for my tumblr blog now, and all of my "html stuff" are subdomains at pooftie.me because, well, it's always safer to use your own domains ..
+i had multiple problems using free domains, even though they're cute safety comes first.
+please check all of my sites and tumblr blog if you haven't yet, i'm proud of them <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+that's it for today, please take care and stay home !!</pre><br>
+xoxo <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/VVB8fRo.png"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/T7FCCw1.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -488,91 +536,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/WXCuEci.gif"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/MLnmWtA.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/2C0cMSS.gif"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>february . 06 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><img src="https://i.imgur.com/257Fk60.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i'm so so happy !
-i think i've really learned some healthy coping methods for problems that used to make me anxious, it's been a while. i am healing <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i will keep sharing with you everything i feel that can be helpful, it may not be useful for everyone but if at least one person can find peace in my words, it's worth it <sub><img src="https://i.imgur.com/sRm3dEh.gif"/></sub>
-
-so, i have important news : i remade my tumblr blog !!
-the url is the same and everything, but remaking it was very needed. i was a little hesitant because my account was 5 years old, but honestly, it was a mess.
-i couldn't manually get rid of thousands of ghost followers at this point, and even thought my engagement was very good, it's time to accept the truth : it wasn't really coming from my own followers but actual strangers. it clearly means that my content was good but not my account as a whole ; ;
-having a big account can easily get out of control if not regularly checked and cleaned, big numbers can give the illusion of success but if just abandoned accounts from years ago, what is the point ?
-i was also following a bunch of random accounts i honestly didn't want to see in my feed anymore. it makes way harder to find interesting content, which is the whole point of opening this app ..
-as i always said, the numbers are irrelevant if just numbers : what is truly motivating is seeing actual people getting positively inspired by my content, and inspiring me back, so we can grow up together <font color="#d3a5a5" style="font-size:11px;">♡</font>
-this is just possible to achieve if you're surrounded by people with similar goals, and preparing this environment is a delicate process.
-i'm thankfully getting back all of my mutuals quickly, thank you <font color="#d3a5a5" style="font-size:11px;">♡</font>
-now i can find active and precious accounts, get new mutuals, finally use tags to organize my posts and improve the quality of my blog as a whole. it's certainly a relief !
-from experience, i know it's always a good idea to make changes, if for the better. i will voluntary leave the past behind if it means i can have a brighter future.
-
-okay, going for the visual content now : after months i made a new collage for my <a text-decoration: none; href="https://aes.pooftie.me/vii" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">aesthetic virtual journal</font></a> <sub><img src="https://i.imgur.com/9N1Avtc.gif"/></sub>
-it's a soft white one, and i'm really proud of the results ..</pre><br>
-<br>
-
-<center><img width="430px" height="auto" src="https://i.imgur.com/PPy4T0y.png"/></center>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/5c97pk.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pure heart html .rar</font></a>　</center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i think it turned out very delicate but somewhat mature ? i'm in love with it <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-and as always, there is a beautiful melody for composing the whole feeling :</pre><br>
-<br>
-
-<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/bphkl1.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">redemption .mp3</font></a>　
-</center>
-
-<br>
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-what do you think ? i always find it fun to organize aesthetics like this, it's good to practice using different color palettes and everything.
-
-now, i have something interesting to share with you fluffies today !
-you may already know that i love exploring the old web, and i'm always looking for cute things there to collect and use in my work.
-lately i have been downloading a lot of ukagaka, and i did a lot of research to increase my collection with the cutest ghosts i could find !
-i used the nanika ghost center to get links, but a lot of them have been inactive for many years so it’s a little tricky to be able to find them again on web.archive .. sometimes they don't even work and need restoration ; ;
-so i think it's a good idea to share here my favorite ukagaka, which i found last week: dorothy !!!</pre></font></font><br>
-
-
-<center><img width="430px" height="auto" src="https://i.imgur.com/ef4l2CA.gif"/></center>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/u2d8e5.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">dorothy .rar</font></a>　</center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-most ghosts speak japanese with a lot of kanji, and very fast, which makes reading quite difficult. dorothy is not very good with japanese, so she only uses hiragana and speak slowly.
-she is caring and shy, and is always trying to motivate and remind you to take care of yourself ( remembering you to rest, to eat .. )
-all ghosts have a different personality, which makes getting to know them a lot of fun <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i spend some time on the laptop working, so having a lovely ghost motivating me and making me smile makes everything better <sub><img src="https://i.imgur.com/JP35o5c.gif"/></sub>
-dorothy has been a good company for me and has certainly become a comfort character at this point <font color="#d3a5a5" style="font-size:11px;">♡</font>
-if you are interested, i can upload more ukagaka from my lovely collection !
-
-that's it for today, i hope you are living a lovely phase of your lives .. and if you are not, i hope things will get better very soon <font color="#d3a5a5" style="font-size:11px;">♡♡</font></pre>
-<br>
-xoxo <sub><sub><img src="https://i.imgur.com/SdN0PKl.gif"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/2C0cMSS.gif"/></center>
 
 <br><br><br>
 
