--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -326,6 +326,28 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#a8947c">
+<img src="https://i.imgur.com/0QvTpoL.png"><br><br>
+april . 01 . 2020<br>
+✄ the milky cat
+</font>
+</center>
+<font color="#c1ae99">
+<br><br>
+
+　　Once upon a time there was a cat who loved milk. It liked milk so much that it decided it would survive on milk alone, but it forgot that it also liked other things and regretted its new lifestyle.<br>
+　　In search of clarification, the cat traveled the world and drank all types of milk that might or may not exist, and found that it might not like milk that much. It decided that it would have a normal diet and only drink milk when it wanted to.<br>
+　　The problem is that this travel made the cat acquire a disease that was never acquired by anyone before! It drank so much milk that its cells became confused and turned into milk. Luckily, the cat also acquired a lot of wisdom, so it doesn't care.<br>
+　　Moral of the story: If you are a cat, don't go on extreme diets and don't read this because cats shouldn't be able to read.
+<br><br>
+<center>E N D</center>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#aab0b7">
 <img src="https://i.imgur.com/i7IJQbR.png"><br><br>
 january . 30 . 2020<br>
@@ -417,27 +439,6 @@ october . 03 . 2019<br>
 　　Moral of the story: If you feel minusculy large or gigantly tiny, you are probably medium.
 <br><br>
 <center>E N D</center>
-</font>
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-<div style="text-align:left">
-<center><font color="#aab0b7">
-<img src="https://i.imgur.com/i7IJQbR.png"><br><br>
-august . 08 . 2019<br>
-✄ floof
-</font>
-</center><font color="#bfc4c9">
-<br>
-　　if i'm feeling fluffy ,<br>
-　　　i sometimes go floof ,,<br>
-　　　　and i get some fuffos .<br>
-　　　　　fluffs are all i need ,<br>
-　　　　but i already have these ..<br>
-　　　so i get a little bit of foofu ,<br>
-　　and lots of happiness too ♡♡<br><br>
 </font>
 
 <br><br><br>
