--- a/fashion.html
+++ b/fashion.html
@@ -343,6 +343,11 @@ p { margin: 0; }
 <center>
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.01.20 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/HDPtXJm.png"/><br>
+<br>
+
+<br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 02.13.20 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/Kb7ScMx.png"/><br>
 <br>
@@ -388,11 +393,6 @@ p { margin: 0; }
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.13.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/d1SFjPO.png"/><br>
-<br>
-
-<br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.29.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/uLtfvWN.png"/><br>
 <br>
 
 
