--- a/portfolio.html
+++ b/portfolio.html
@@ -237,9 +237,11 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/yZDQncB.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/KICsPiP.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/uaqaR6k.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/tZ94XKz.jpg">
+<img width="300px" height="auto" src="https://i.imgur.com/iSQXs89.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/40yJb4m.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/KyF2u47.png"><br><br>
+<img width="auto" height="320px" src="https://i.imgur.com/uTSJoqY.png"/> 
+<img width="auto" height="320px" src="https://i.imgur.com/jSHmf04.png"/><br><br>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
