--- a/links.html
+++ b/links.html
@@ -317,6 +317,8 @@ z-index: 3;
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 105px; height: 50px; overflow-x:hidden; line-height:13px; padding:5px; border: 1px dotted #e2d5d0;">
+<a id="ooo" href="https://1997.pooftie.me" target="_blank" >win95 desktop</a>
+<br>
 <a id="ooo" href="https://boo.pooftie.me" target="_blank" >script in progress</a>
 <br>
 <a id="ooo" href="https://ch.pooftie.me" target="_blank" >soft ib simulation</a>
