--- a/portfolio.html
+++ b/portfolio.html
@@ -249,8 +249,8 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/DWF38dg.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/eMPybHB.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/INDlrdR.gif"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/De0lji0.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
