--- a/links.html
+++ b/links.html
@@ -316,7 +316,7 @@ z-index: 3;
 <div style="position:relative; float:right;">
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
-<div style="width: 105px; height: 50px; overflow-x:hidden; line-height:13px; padding:5px; border: 1px dotted #e2d5d0;">
+<div style="width: 100px; height: 50px; overflow-x:hidden; line-height:13px; padding:5px; border: 1px dotted #e2d5d0;">
 <a id="ooo" href="https://1997.pooftie.me" target="_blank" >win95 desktop</a>
 <br>
 <a id="ooo" href="https://boo.pooftie.me" target="_blank" >script in progress</a>
@@ -345,7 +345,7 @@ z-index: 3;
 <div style="position:relative; float:right; right:7%;">
 <sub><sub><img src="https://i.imgur.com/SYSp3iZ.png"></sub></sub><font color="#ddcbc1"> for friends :</font><br>
 <br>
-　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/tFcjcNMxEz" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a><br>
 　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >♡</a><br>
 </div>
 
