--- a/archive.html
+++ b/archive.html
@@ -895,7 +895,7 @@ i know it's a good phase and phases come and go,, but i do feel proud of myself 
 one day, i know, i will love myself the way i deserve <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
 
 now changing subjects , after receiving many requests of mutuals, i decided to share my line acc in my links page !!
-i made a new one, with a very cute id ( @pomf ) and i'm happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i made a new one, with a very cute id ( pooftie ) and i'm happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
 while discord is my fav app for group chat ( because of all the features & bots ) line is actually my fav for private messages,, it's the app i use for talking with bubu and we even have matching pfp there <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
 as you already know i love collecting line themes, stickers & emojis.. i use this app for some years now and i really like it, so i would like to add more friends there <sub><img src="https://i.imgur.com/4oQuNAB.gif"/></sub>
 i think discord private messages are really boring - just like line groups are boring - so for me both complement each other perfectly !!
