--- a/status.html
+++ b/status.html
@@ -326,7 +326,7 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
-<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">excited</font> <sub><sub><img src="https://i.imgur.com/Z2ABbEn.gif"></sub></sub>
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">pouty</font> <sub><sub><img src="https://i.imgur.com/8cM9SOX.gif"></sub></sub>
 <br><br><br>
 　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/ncZFpWGgfJPjZUHH7"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
@@ -336,6 +336,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>10.04.20</sup></font> <font color="#c48d8d">→</font>　i don't need approval.
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>27.03.20</sup></font> <font color="#a0acbc">→</font>　i'm floating !!
 
 <br><br><br>
@@ -361,9 +364,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>11.11.19</sup></font> <font color="#bea5ce">→</font>　little by little.. i can improve
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>30.10.19</sup></font> <font color="#c48d8d">→</font>　tomorrow : free candy day !
 
 
 </div>
