--- a/milkywoods.html
+++ b/milkywoods.html
@@ -426,38 +426,26 @@ function getPosition(el) {
 
 <div style="position:absolute; left:10%; right:10%;">
 <center>
-<sub><img src="https://i.imgur.com/kDn09fO.gif"/></sub>　<font color="#998d7d">milky woods</font>　<sub><img src="https://i.imgur.com/kDn09fO.gif"/></sub>
-<br><br><br>
-<img src="https://i.imgur.com/k7NxBbW.gif"/>
-<br><br>
-<font style="font-size: 8px;" color="#a89c8d">
-click to play !
-</font>
-<br><br>
-<table style="border-spacing: 5px;">
-<tr>
-<td><a href="/fluffymaid"><img src="https://i.imgur.com/Cw5SPhx.png"/></a> </td>
-<td><a href="/jumpjump"><img src="https://i.imgur.com/OCtL8fg.png"/></a> </td>
-</tr>
-<tr>
-<td><a href="/tinykittens"><img src="https://i.imgur.com/hsu8YwY.png"/></a> </td>
-<td><a href="/bunnyshop"><img src="https://i.imgur.com/Beri781.gif"/></a> </td>
-</tr>
-<tr>
-<td><a href="/honeytime"><img src="https://i.imgur.com/mytMMb1.png"/></a> </td>
-<td><a href="/softdesserts"><img src="https://i.imgur.com/iUrLxM9.png"/></a> </td>
-</tr>
-<tr>
-<td><a href="/bearcare"><img src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
-<td><a href="/drawing"><img src="https://i.imgur.com/4Zbb69y.png"/></a> </td>
-</tr>
-</table>
-
+<img src="https://i.imgur.com/VGk4m2O.gif"/><font color="#9c7776"> ‌milky woods</font>
+<br><font style="font-size: 8px;" color="#ad8887"> ‌ ‌ ‌ playing with dreams</font>
 <br>
+<br><br>
+<font style="font-size: 8px;" color="#b38d94">
+<sub><img src="https://i.imgur.com/L7o6W1E.gif"/></sub> ‌ my html games ( pc & mobile ) :</font>
+<br><br>
+<div style="width:50px; padding:5px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
+<font style="font-size: 9px;" color="#b38d94">soon !!</font>
+</div>
 
-<img src="https://i.imgur.com/k7NxBbW.gif"/>
-
-<br><br><br>
+<br><br>
+<font style="font-size: 8px;" color="#b38d94">
+<sub><img src="https://i.imgur.com/NTkeKx8.gif"/></sub> ‌ my flash games ( pc only ) :
+<br><br>
+<a href="https://files.catbox.moe/n5tkq1.rar" target="_blank"><img style="border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;" src="https://i.imgur.com/BltA2XT.gif"/></a>
+<br><br>
+( click to download all the .swf files )
+</font>
+<br><br><br><br>
 
 
 </center>
