--- a/recommended.html
+++ b/recommended.html
@@ -330,9 +330,9 @@ z-index: 3;
 　<a href="https://reia.neocities.org" target="_blank"><img src="https://i.imgur.com/Oo4OZuP.png"></a>
 　<a href="https://melodicake.neocities.org" target="_blank"><img src="https://i.imgur.com/JgeSrkA.gif"></a>
 
-　　<br><br><a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
+　　‌‌<br><br>　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
 <a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a>
-<a href="https://howtobecomeanangel.neocities.org" target="_blank"><img src="https://i.imgur.com/dLNVRTT.png"></a>
+<a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/dyNNW2I.gif"></a>
 
 　　<br><br><a href="https://mimi-dollie.blogspot.com" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
 　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
