--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,85 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>april . 16 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img src="https://i.imgur.com/f4k2YxS.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+my last post was very boring but this one will have a lot of content.... next one will be full of stuff too ( mainly digital because my crafting & sewing materials are still inside boxes until the end of the quarantine )
+so let's get started <sub><sub><img src="https://i.imgur.com/AuDUzO4.gif"/></sub></sub>
+i made this little win95 desktop simulation for studying div and button behavior.. !
+take a look at <a id="linkbjinho" href="https://1997.pooftie.me" target="_blank">1997.pooftie.me</a>, specially if you like webcore : </pre>
+<br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/8coUy8X.gif"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/6eac2s.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">8AM .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it turned out super cute and i'm really proud <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+there are some adorable graphics i edited from ragnarok online ( the solace gif on the top right is my personal favorite <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font> )
+this little music right there is an edit i did with "party night" from di gi charat, one of my favorite anime from my childhood ! do you like it ?
+as you may know i'm really bad with javascript coding but i'm trying to make different stuff lately for making html games in the near future.
+
+i was thinking about my flash games, since all swf files will stop working on browser by the end of this year.. i am trying to save as many swf as i can as a flash game collector, and many other people are working hard for not letting flash die completely.
+flash can be played at pc on specific softwares, that work on pretty much any computer. i wanted to convert my flash games into html, but i honestly think keeping my games as swf will be a motivation for people trying to find other flash games and animations !
+i know just a few people will actually download my games and the software for playing them, but i will be happy if i can inspire even 1 person to play those games that made my childhood so happy <sub><sub><img src="https://i.imgur.com/og4DZFE.gif"/></sub></sub>
+there are an infinity of games that are incredibly fun and cute, that will be forever flash games and will be forgotten if people just pretend flash didn't exist.. i feel that it's my responsibility as a game designer to not adapt swf into html, in respect to the artists that inspired me in first place.
+so i made my old games downloadable, and make new games with html from now on <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i fixed some issues with some very old ones and remade the visuals of my drawing tool :</pre><br>
+<br>
+<center><img width="360px" height="auto" src="https://i.imgur.com/MvjM0Rx.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+isn't it adorable ? i made puf bunny there mixing different colors with the "alpha" option <font color="#d3a5a5" style="font-size:11px;">♡</font>
+please make sure to download my flash games <a id="linkbjinho" href="/milkywoods" target="_blank">here</a> and send me your drawings !
+keep an eye open because i'm planning on coming back next post with some html games, i'm very excited for this new content !!
+a little spoiler of what is coming ..</pre><br>
+
+<center><img width="220px" height="auto" src="https://i.imgur.com/yl6FcGv.png"/></center>
+
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm making cute art using 3D brush, a new style for working with from now on !
+what do you think ? <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i have been very productive lately ( maybe because i'm bored with the quarantine heh ) so i also made another html page, one i have been struggling to make for the longest time... but bubu helped me !!!
+<a id="linkbjinho" href="https://tea.pooftie.me" target="_blank">tea.pooftie.me</a> is an weather website where you can check if it's the right time to have a tea party or not :</pre><br>
+<br>
+<center><img width="410px" height="auto" src="https://i.imgur.com/sdjKr0J.gif"/></center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's very random but it's nice having my own cute weather website, and i kind of learned how to deal with apis too <sub><sub><img src="https://i.imgur.com/fyXH0Lg.gif"/></sub></sub>
+that's it for today, i hope you're having a lovely time.. stay safe <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/psrOEBE.png"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -457,85 +536,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/BsGlypz.gif"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/T7FCCw1.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/MLnmWtA.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>february . 19 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><img src="https://i.imgur.com/0mAd6Zs.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i hope you are doing better than the last time you came here ..
-and maybe next time you will have experienced many new happy things. hopefully, me too !
-
-i noticed that day after day i'm getting less attached to my phone, i mostly use it for playing games but i've been charging my phone only every other day.. and my phone battery is not thaaat good, i used to charge it every night <sub><img src="https://i.imgur.com/Biouogu.png"/></sub>
-do you remember my goal of using internet only 5 hours a week ? ( except if for talking with bubu, working, studying, reading .. important stuff generally )
-i've definitely achieved that goal, and for this year i will set a new goal : only charging my phone twice a week !!!
-i prefer using my laptop for most things, and i tend to be more productive with my time here while in my phone i can just watch videos, check my apps and play games. i don't really think i need to do that for more than 15min a day... or maybe i can do that for 30min every other day ?
-if you like the content i post on my accounts please don't worry, i will certainly keep updating once / twice a week as i was already trying to do. i will have to be more careful about preparing content beforehand, so less unnecessary spontaneous updates can be, indeed, expected ( i'm talking about idly posting random venting and routine updates while i could just be journaling or talking to someone )
-those "internet detox" are absolutely refreshing, i can make better use of my time doing all my daily tasks and still have free time for my hobbies & projects <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i've found that even using my laptop for "virtually journaling" offline feels really good and a lot more comfortable. i like printing those pages ( also my instagram templates ) and that way i can have the best of both worlds, so i will stick to that in my routine <sub><img src="https://i.imgur.com/0j6GrC3.gif"/></sub>
-i was a little afraid i would feel distant from people for not checking social media all the time, but i don't feel like i'm missing a lot honestly. i don't think this is really important in the end of the day.
-maybe we get easily addicted to "validation" when using internet, like we have to share things or no one will know, like we have to react to things people share or they don't matter...
-what is the point of something being seen by multiple people ? i personally think that unless we're so close to someone we really do care about their everyday lives, it needs a purpose, even if it's "making people smile" ( valid purpose i must say )
-every single time i realize i'm not being useful in any way i just don't see the point of wasting my time & energy posting something for everyone to see, it's almost embarrassing.. i feel like i'm just bragging, oversharing even <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-hopefully these negative experiences will disappear more and more as i learn !
-
-talking on phone stuff, i made a cute new phone case for me yesterday :</pre><br>
-<br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/qgTfLuE.png"/></center>
-
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it looks adorable, i'm so happy with it <font color="#d3a5a5" style="font-size:11px;">♡</font>
-the one i was using before was very old, i had to buy a new transparent case so i was postponing the situation until it started to bother me for real <sub><img src="https://i.imgur.com/N5TUvvy.gif"/></sub>
-
-so.. it's been a while since i've planned sewing my own "stuffie purses" ( i already had some of these but my mom helped me in the whole cutting & sewing process at the time, and they're also a little old now.. )
-i finally did it, so here they are :</pre><br>
-<br>
-
-<center><img width="auto" height="320px" src="https://i.imgur.com/uTSJoqY.png"/> 
-<img width="auto" height="320px" src="https://i.imgur.com/jSHmf04.png"/></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i'm really happy with how these turned out, they're shoulder / crossbody purses with very delicate pearl straps and their bellies are just the perfect size for carrying around some important things <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-they look big but they're 30cm tall ( teddy is a little taller )
-it feels really nice using those, they're so soft .. i can literally carry a stuffie outside and it's socially acceptable LOL
-
-now i will, after a long time, write a q&a text !
-despite being a curiosity of some people, i didn't really feel the need to write about it until a few days ago when i seriously thought about it.</pre><br>
-
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-
-it's important for me keeping my content organized, avoiding reposting things all over the place and keeping my personal content in appropriate places. i'm trying my best to do so, but i used to do it purely for keeping the quality of my accounts, not wasting time reposting or make the mistake of oversharing, naturally ..
-however, i stopped to think deeply about it and realized that the content we post on the internet really affects other people directly, and some things don't always have the positive effect that we would like to convey. i always post things with the intention of motivating and inspiring, as well as motivating myself to keep improving and to receive constructive criticism, but unfortunately negative effects can happen when people compare each other or idolize each other.
-i seek genuineness and transparency with my words, and this avoids some bad impressions and consequently negative feelings. when we are sincere in referring to ourselves, it is very motivating to other people. if you don't empathize with others they won't consider you trustworthy and they won't embrace you wholeheartedly, they can certainly consider you a threat, develop a negative rivalry or even insecurity and envy. if you are narcissistic or self-deprecating, you'll do yourself harm and irritate, encouraging people to feel bad things about the success of others.
-it is not possible to magically repair people's self-esteem, but it is possible to avoid worsening the situation and to strive to be a good example. if i can, i will !
-i insist on sharing my ( imperfect but true ) journey with others who can identify and find some hope in my words. i want people to see what i produce and try to be productive too, i want people to get to know themselves and discover individual happiness. doing it properly can be a delicate process, i've made a lot of mistakes and i know i'm still making a few, but im happy if i can fix that little by little.
-i'm sorry if i have ever demotivated someone for any reason, i will be extra careful with what i expose to make sure i'm posting things in appropriate places in the appropriate way, for people who are really going to make good use of it. thankfully i have been doing a good job with this recently, but i know i still have room to improve.. !
-</pre>
-<br>
-i hope i was clear with my words, i haven't written long texts in a while ;;
-<br><br>
-xoxo <sub><sub><img src="https://i.imgur.com/WXCuEci.gif"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/MLnmWtA.png"/></center>
 
 <br><br><br>
 
