--- a/archive.html
+++ b/archive.html
@@ -322,6 +322,87 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/MLnmWtA.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>february . 19 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/0mAd6Zs.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i hope you are doing better than the last time you came here ..
+and maybe next time you will have experienced many new happy things. hopefully, me too !
+
+i noticed that day after day i'm getting less attached to my phone, i mostly use it for playing games but i've been charging my phone only every other day.. and my phone battery is not thaaat good, i used to charge it every night <sub><img src="https://i.imgur.com/Biouogu.png"/></sub>
+do you remember my goal of using internet only 5 hours a week ? ( except if for talking with bubu, working, studying, reading .. important stuff generally )
+i've definitely achieved that goal, and for this year i will set a new goal : only charging my phone twice a week !!!
+i prefer using my laptop for most things, and i tend to be more productive with my time here while in my phone i can just watch videos, check my apps and play games. i don't really think i need to do that for more than 15min a day... or maybe i can do that for 30min every other day ?
+if you like the content i post on my accounts please don't worry, i will certainly keep updating once / twice a week as i was already trying to do. i will have to be more careful about preparing content beforehand, so less unnecessary spontaneous updates can be, indeed, expected ( i'm talking about idly posting random venting and routine updates while i could just be journaling or talking to someone )
+those "internet detox" are absolutely refreshing, i can make better use of my time doing all my daily tasks and still have free time for my hobbies & projects <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i've found that even using my laptop for "virtually journaling" offline feels really good and a lot more comfortable. i like printing those pages ( also my instagram templates ) and that way i can have the best of both worlds, so i will stick to that in my routine <sub><img src="https://i.imgur.com/0j6GrC3.gif"/></sub>
+i was a little afraid i would feel distant from people for not checking social media all the time, but i don't feel like i'm missing a lot honestly. i don't think this is really important in the end of the day.
+maybe we get easily addicted to "validation" when using internet, like we have to share things or no one will know, like we have to react to things people share or they don't matter...
+what is the point of something being seen by multiple people ? i personally think that unless we're so close to someone we really do care about their everyday lives, it needs a purpose, even if it's "making people smile" ( valid purpose i must say )
+every single time i realize i'm not being useful in any way i just don't see the point of wasting my time & energy posting something for everyone to see, it's almost embarrassing.. i feel like i'm just bragging, oversharing even <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+hopefully these negative experiences will disappear more and more as i learn !
+
+talking on phone stuff, i made a cute new phone case for me yesterday :</pre><br>
+<br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/qgTfLuE.png"/></center>
+
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it looks adorable, i'm so happy with it <font color="#d3a5a5" style="font-size:11px;">♡</font>
+the one i was using before was very old, i had to buy a new transparent case so i was postponing the situation until it started to bother me for real <sub><img src="https://i.imgur.com/N5TUvvy.gif"/></sub>
+
+so.. it's been a while since i've planned sewing my own "stuffie purses" ( i already had some of these but my mom helped me in the whole cutting & sewing process at the time, and they're also a little old now.. )
+i finally did it, so here they are :</pre><br>
+<br>
+
+<center><img width="auto" height="320px" src="https://i.imgur.com/uTSJoqY.png"/> 
+<img width="auto" height="320px" src="https://i.imgur.com/jSHmf04.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm really happy with how these turned out, they're shoulder / crossbody purses with very delicate pearl straps and their bellies are just the perfect size for carrying around some important things <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+they look big but they're 30cm tall ( teddy is a little taller )
+it feels really nice using those, they're so soft .. i can literally carry a stuffie outside and it's socially acceptable LOL
+
+now i will, after a long time, write a q&a text !
+despite being a curiosity of some people, i didn't really feel the need to write about it until a few days ago when i seriously thought about it.</pre><br>
+
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+
+it's important for me keeping my content organized, avoiding reposting things all over the place and keeping my personal content in appropriate places. i'm trying my best to do so, but i used to do it purely for keeping the quality of my accounts, not wasting time reposting or make the mistake of oversharing, naturally ..
+however, i stopped to think deeply about it and realized that the content we post on the internet really affects other people directly, and some things don't always have the positive effect that we would like to convey. i always post things with the intention of motivating and inspiring, as well as motivating myself to keep improving and to receive constructive criticism, but unfortunately negative effects can happen when people compare each other or idolize each other.
+i seek genuineness and transparency with my words, and this avoids some bad impressions and consequently negative feelings. when we are sincere in referring to ourselves, it is very motivating to other people. if you don't empathize with others they won't consider you trustworthy and they won't embrace you wholeheartedly, they can certainly consider you a threat, develop a negative rivalry or even insecurity and envy. if you are narcissistic or self-deprecating, you'll do yourself harm and irritate, encouraging people to feel bad things about the success of others.
+it is not possible to magically repair people's self-esteem, but it is possible to avoid worsening the situation and to strive to be a good example. if i can, i will !
+i insist on sharing my ( imperfect but true ) journey with others who can identify and find some hope in my words. i want people to see what i produce and try to be productive too, i want people to get to know themselves and discover individual happiness. doing it properly can be a delicate process, i've made a lot of mistakes and i know i'm still making a few, but im happy if i can fix that little by little.
+i'm sorry if i have ever demotivated someone for any reason, i will be extra careful with what i expose to make sure i'm posting things in appropriate places in the appropriate way, for people who are really going to make good use of it. thankfully i have been doing a good job with this recently, but i know i still have room to improve.. !
+</pre>
+<br>
+i hope i was clear with my words, i haven't written long texts in a while ;;
+<br><br>
+xoxo <sub><sub><img src="https://i.imgur.com/WXCuEci.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/MLnmWtA.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/2C0cMSS.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
