--- a/fashion.html
+++ b/fashion.html
@@ -461,68 +461,50 @@ p { margin: 0; }
 <font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <br><br>
 
-<img width="300px" height="auto" src="https://i.imgur.com/rIpeKyr.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/IgyBaUM.png"/><br><br>
+<br>
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/H6pgpvh.jpg"/><br><br>
+<br>
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/YoUTC3o.jpg"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/Ay48NUx.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/xZsmRuR.png"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/PKCWQOA.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/TnJlqCH.jpg"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/OpWzrc5.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/MybQB3E.jpg"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/lemlujq.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/kyvwsom.png"/><br><br>
 <br>
 
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/fKHSMGe.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/v8yMYOk.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/0JzQAf8.png"/><br><br>
-<br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/R5ysb9U.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/n3m3CtB.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/r2xqpHV.png"/><br><br>
-<br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/Q1aekpJ.jpg"/><br><br>
-<br>
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/ZfC1w51.jpg"/><br><br>
-<br>
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/P7rqRld.jpg"/><br><br>
-<br>
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/rjifwbh.jpg"/><br><br>
-<br>
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/YwouNql.jpg"/><br><br>
-<br>
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/xepNwHV.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/FP8B0Gh.png"/><br><br>
 <br>
 
 
